--- a/MyShelfie/src/GUI/GameScene.fxml
+++ b/MyShelfie/src/GUI/GameScene.fxml
@@ -200,7 +200,7 @@
       </ImageView>
       <ImageView fx:id="MyPGC" fitHeight="179.0" fitWidth="131.0" layoutX="366.0" layoutY="670.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../../../MyShelfie/Resources/personal_goal_cards/Personal_Goals12.png" />
+            <Image url="@../../../MyShelfie/Resources/personal_goal_cards/front_EMPTY.jpg" />
          </image>
       </ImageView>
       <Label layoutX="570.0" layoutY="142.0" text="Player1" textFill="#c0c614">
@@ -225,7 +225,7 @@
          </font>
       </Text>
       <TableView fx:id="TableLeaderboard" layoutX="925.0" layoutY="85.0" prefHeight="204.0" prefWidth="310.0" />
-      <Text layoutX="801.0" layoutY="63.0" strokeType="OUTSIDE" strokeWidth="0.0" text="It's Player1 turn">
+      <Text fx:id="TopLabel" layoutX="763.0" layoutY="63.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Waiting for game to start...">
          <font>
             <Font size="40.0" />
          </font>
@@ -319,10 +319,7 @@
         </rowConstraints>
          <children>
             <ImageView fitHeight="37.0" fitWidth="37.0" pickOnBounds="true" preserveRatio="true" />
-            <ImageView fitHeight="37.0" fitWidth="37.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1">
-               <image>
-                  <Image url="@../../../MyShelfie/Resources/item_tiles/Libri1.3.png" />
-               </image></ImageView>
+            <ImageView fitHeight="37.0" fitWidth="37.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" />
             <ImageView fitHeight="37.0" fitWidth="37.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2" />
             <ImageView fitHeight="37.0" fitWidth="37.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="3" />
             <ImageView fitHeight="37.0" fitWidth="37.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="4" />
