--- a/MyShelfie/src/GUI/GameScene.fxml
+++ b/MyShelfie/src/GUI/GameScene.fxml
@@ -358,5 +358,21 @@
             <Image url="@../../../MyShelfie/Resources/boards/bookshelf.png" />
          </image>
       </ImageView>
+      <ImageView fx:id="TileDrawnPlace" fitHeight="63.0" fitWidth="257.0" layoutX="346.0" layoutY="534.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../Resources/misc/base_pagina2.jpg" />
+         </image>
+      </ImageView>
+      <GridPane fx:id="TileToBeInserted" layoutX="346.0" layoutY="534.0" prefHeight="54.0" prefWidth="214.0">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+      </GridPane>
    </children>
 </AnchorPane>
