--- a/MyShelfie/src/GUI/GameScene.fxml
+++ b/MyShelfie/src/GUI/GameScene.fxml
@@ -1,5 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.scene.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.shape.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableView?>
@@ -13,7 +20,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane fx:id="GameAnchor" prefHeight="865.0" prefWidth="1298.0" stylesheets="@Application.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.GameSceneController">
+<AnchorPane fx:id="GameAnchor" prefHeight="865.0" prefWidth="1298.0" stylesheets="@Application.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.GameSceneController">
    <children>
       <ImageView fx:id="BoardID" fitHeight="472.0" fitWidth="482.0" layoutX="18.0" layoutY="11.0" pickOnBounds="true" preserveRatio="true">
          <image>
@@ -203,17 +210,17 @@
             <Image url="@../../../MyShelfie/Resources/personal_goal_cards/front_EMPTY.jpg" />
          </image>
       </ImageView>
-      <Label layoutX="570.0" layoutY="142.0" text="Player1" textFill="#c0c614">
+      <Label fx:id="p1Label" layoutX="570.0" layoutY="142.0" text="Player1" textFill="#c0c614">
          <font>
             <Font size="20.0" />
          </font>
       </Label>
-      <Label layoutX="570.0" layoutY="318.0" text="Player2" textFill="#c0c614">
+      <Label fx:id="p2Label" layoutX="570.0" layoutY="318.0" text="Player2" textFill="#c0c614">
          <font>
             <Font size="20.0" />
          </font>
       </Label>
-      <Label layoutX="570.0" layoutY="488.0" text="Player3" textFill="#c0c614">
+      <Label fx:id="p3Label" layoutX="570.0" layoutY="488.0" text="Player3" textFill="#c0c614">
          <font>
             <Font size="20.0" />
          </font>
@@ -351,8 +358,8 @@
 
          </children>
       </GridPane>
-      <Text fx:id="CG1_id" layoutX="879.0" layoutY="382.0" strokeType="OUTSIDE" strokeWidth="0.0" text="CGC1 description" wrappingWidth="117.95574951171864" />
-      <Text fx:id="CG2_id" layoutX="879.0" layoutY="520.0" strokeType="OUTSIDE" strokeWidth="0.0" text="CGC2 description" wrappingWidth="117.95574951171864" />
+      <Text fx:id="CG1_id" layoutX="846.0" layoutY="364.0" strokeType="OUTSIDE" strokeWidth="0.0" text="CGC1 description" wrappingWidth="117.95574951171864" />
+      <Text fx:id="CG2_id" layoutX="846.0" layoutY="521.0" strokeType="OUTSIDE" strokeWidth="0.0" text="CGC2 description" wrappingWidth="117.95574951171864" />
       <ImageView fx:id="MyShelf" fitHeight="317.0" fitWidth="333.0" layoutX="11.0" layoutY="539.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../../MyShelfie/Resources/boards/bookshelf.png" />
@@ -374,5 +381,15 @@
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
       </GridPane>
+      <ImageView fx:id="token1" fitHeight="74.0" fitWidth="72.0" layoutX="1138.0" layoutY="336.0" pickOnBounds="true" preserveRatio="true" rotate="-11.3">
+         <image>
+            <Image url="@../../Resources/scoring_tokens/scoring_8.jpg" />
+         </image>
+      </ImageView>
+      <ImageView fx:id="token2" fitHeight="74.0" fitWidth="72.0" layoutX="1147.0" layoutY="487.0" pickOnBounds="true" preserveRatio="true" rotate="-11.3">
+         <image>
+            <Image url="@../../Resources/scoring_tokens/scoring_8.jpg" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
