--- a/MyShelfie/src/GUI/GameScene.fxml
+++ b/MyShelfie/src/GUI/GameScene.fxml
@@ -1,26 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.shape.*?>
-<?import javafx.scene.text.*?>
 <?import javafx.scene.Cursor?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane fx:id="GameAnchor" prefHeight="865.0" prefWidth="1298.0" stylesheets="@Application.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.GameSceneController">
+<AnchorPane fx:id="GameAnchor" prefHeight="865.0" prefWidth="1298.0" stylesheets="@Application.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.GameSceneController">
    <children>
       <ImageView fx:id="BoardID" fitHeight="472.0" fitWidth="482.0" layoutX="18.0" layoutY="11.0" pickOnBounds="true" preserveRatio="true">
          <image>
@@ -213,12 +208,6 @@
             <Font size="20.0" />
          </font>
       </Label>
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="200.0" layoutX="693.0" layoutY="631.0" stroke="BLACK" strokeType="INSIDE" width="599.0" />
-      <Text fill="#e1bc04" layoutX="905.0" layoutY="760.0" strokeType="OUTSIDE" strokeWidth="0.0" text="CHAT">
-         <font>
-            <Font size="70.0" />
-         </font>
-      </Text>
       <TableView fx:id="TableLeaderboard" layoutX="925.0" layoutY="85.0" prefHeight="204.0" prefWidth="310.0" />
       <Text fx:id="TopLabel" layoutX="763.0" layoutY="63.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Waiting for game to start...">
          <font>
@@ -379,5 +368,9 @@
             <Image url="@../../Resources/scoring_tokens/scoring_8.jpg" />
          </image>
       </ImageView>
+
+      <TextField fx:id="chatTextField" layoutX="692.0" layoutY="790.0" prefHeight="44.0" prefWidth="505.0" />
+      <Button fx:id="chatButton" layoutX="1201.0" layoutY="790.0" mnemonicParsing="false" onAction="#chatButtonPressed" prefHeight="44.0" prefWidth="85.0" text="Chat" />
+      <TextArea fx:id="messageTextArea2" editable="false" focusTraversable="false" layoutX="692.0" layoutY="615.0" prefHeight="173.0" prefWidth="594.0" wrapText="true" />
    </children>
 </AnchorPane>
