--- a/MyShelfie/src/GUI/GameScene.fxml
+++ b/MyShelfie/src/GUI/GameScene.fxml
@@ -297,7 +297,7 @@
       </ImageView>
       <ImageView fx:id="TileDrawnPlace" fitHeight="63.0" fitWidth="257.0" layoutX="346.0" layoutY="534.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../../Resources/misc/base_pagina2.jpg" />
+            <Image url="@../../../MyShelfie/Resources/misc/base_pagina2.jpg" />
          </image>
       </ImageView>
       <GridPane fx:id="TileToBeInserted" layoutX="346.0" layoutY="534.0" prefHeight="54.0" prefWidth="214.0">
@@ -313,17 +313,56 @@
       </GridPane>
       <ImageView fx:id="token1" fitHeight="74.0" fitWidth="72.0" layoutX="1138.0" layoutY="336.0" pickOnBounds="true" preserveRatio="true" rotate="-11.3">
          <image>
-            <Image url="@../../Resources/scoring_tokens/scoring_8.jpg" />
+            <Image url="@../../../MyShelfie/Resources/scoring_tokens/scoring_8.jpg" />
          </image>
       </ImageView>
       <ImageView fx:id="token2" fitHeight="74.0" fitWidth="72.0" layoutX="1147.0" layoutY="487.0" pickOnBounds="true" preserveRatio="true" rotate="-11.3">
          <image>
-            <Image url="@../../Resources/scoring_tokens/scoring_8.jpg" />
+            <Image url="@../../../MyShelfie/Resources/scoring_tokens/scoring_8.jpg" />
          </image>
       </ImageView>
 
       <TextField fx:id="chatTextField" layoutX="692.0" layoutY="790.0" prefHeight="44.0" prefWidth="505.0" />
       <Button fx:id="chatButton" layoutX="1201.0" layoutY="790.0" mnemonicParsing="false" onAction="#chatButtonPressed" prefHeight="44.0" prefWidth="85.0" text="Chat" />
       <TextArea fx:id="messageTextArea2" editable="false" focusTraversable="false" layoutX="692.0" layoutY="615.0" prefHeight="173.0" prefWidth="594.0" wrapText="true" />
+      <GridPane fx:id="shelfButtonsPane" layoutX="37.0" layoutY="497.0" prefHeight="37.0" prefWidth="261.0" visible="false">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+         <children>
+            <ImageView fitHeight="42.0" fitWidth="42.0" pickOnBounds="true" preserveRatio="true" translateX="4.0">
+               <image>
+                  <Image url="@../../../MyShelfie/Resources/misc/sort-down.png" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="42.0" fitWidth="42.0" pickOnBounds="true" preserveRatio="true" translateX="4.0" GridPane.columnIndex="1">
+               <image>
+                  <Image url="@../../../MyShelfie/Resources/misc/sort-down.png" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="42.0" fitWidth="42.0" pickOnBounds="true" preserveRatio="true" translateX="4.0" GridPane.columnIndex="2">
+               <image>
+                  <Image url="@../../../MyShelfie/Resources/misc/sort-down.png" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="42.0" fitWidth="42.0" pickOnBounds="true" preserveRatio="true" translateX="4.0" GridPane.columnIndex="3">
+               <image>
+                  <Image url="@../../../MyShelfie/Resources/misc/sort-down.png" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="42.0" fitWidth="42.0" pickOnBounds="true" preserveRatio="true" translateX="4.0" GridPane.columnIndex="4">
+               <image>
+                  <Image url="@../../../MyShelfie/Resources/misc/sort-down.png" />
+               </image>
+            </ImageView>
+         </children>
+      </GridPane>
    </children>
 </AnchorPane>
