--- a/MyShelfie/src/GUI/GameScene.fxml
+++ b/MyShelfie/src/GUI/GameScene.fxml
@@ -318,9 +318,9 @@
          </image>
       </ImageView>
 
-      <TextField fx:id="chatTextField" layoutX="692.0" layoutY="790.0" prefHeight="44.0" prefWidth="505.0" />
-      <Button fx:id="chatButton" layoutX="1201.0" layoutY="790.0" mnemonicParsing="false" onAction="#chatButtonPressed" prefHeight="44.0" prefWidth="85.0" text="Chat" />
-      <TextArea fx:id="messageTextArea2" editable="false" focusTraversable="false" layoutX="692.0" layoutY="615.0" prefHeight="173.0" prefWidth="594.0" wrapText="true" />
+      <TextField fx:id="chatTextField" layoutX="692.0" layoutY="790.0" prefHeight="44.0" prefWidth="505.0" visible="false" />
+      <Button fx:id="chatButton" layoutX="1201.0" layoutY="790.0" mnemonicParsing="false" onAction="#chatButtonPressed" prefHeight="44.0" prefWidth="85.0" text="Chat" visible="false" />
+      <TextArea fx:id="messageTextArea2" editable="false" focusTraversable="false" layoutX="692.0" layoutY="615.0" prefHeight="173.0" prefWidth="594.0" visible="false" wrapText="true" />
       <GridPane fx:id="shelfButtonsPane" layoutX="37.0" layoutY="497.0" prefHeight="37.0" prefWidth="261.0" visible="false">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
