--- a/MyShelfie/src/GUI/GameScene.fxml
+++ b/MyShelfie/src/GUI/GameScene.fxml
@@ -18,14 +18,6 @@
 
 <AnchorPane fx:id="GameAnchor" prefHeight="865.0" prefWidth="1298.0" stylesheets="@Application.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.GameSceneController">
    <children>
-      <ImageView fx:id="BoardID" fitHeight="472.0" fitWidth="482.0" layoutX="18.0" layoutY="11.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../../../MyShelfie/Resources/boards/livingroom.png" />
-         </image>
-         <cursor>
-            <Cursor fx:constant="DEFAULT" />
-         </cursor>
-      </ImageView>
       <GridPane fx:id="Opp1ShelfGrid" hgap="5.0" layoutX="546.0" layoutY="30.0" prefHeight="116.0" prefWidth="112.0" vgap="4.0">
          <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -202,6 +194,14 @@
          <image>
             <Image url="@../../../MyShelfie/Resources/personal_goal_cards/front_EMPTY.jpg" />
          </image>
+      </ImageView>
+      <ImageView fx:id="BoardID" fitHeight="472.0" fitWidth="482.0" layoutX="18.0" layoutY="11.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../../MyShelfie/Resources/boards/livingroom.png" />
+         </image>
+         <cursor>
+            <Cursor fx:constant="DEFAULT" />
+         </cursor>
       </ImageView>
       <Label fx:id="p1Label" layoutX="570.0" layoutY="142.0" textFill="#c0c614">
          <font>
@@ -390,5 +390,8 @@
       </Text>
       <ImageView fx:id="myToken1" fitHeight="44.0" fitWidth="65.0" layoutX="362.0" layoutY="615.0" pickOnBounds="true" preserveRatio="true" />
       <ImageView fx:id="MyToken2" fitHeight="44.0" fitWidth="65.0" layoutX="465.0" layoutY="615.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="EndGameToken1" fitHeight="63.0" fitWidth="93.0" layoutX="729.0" layoutY="107.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="EndGameToken2" fitHeight="63.0" fitWidth="93.0" layoutX="725.0" layoutY="284.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="EndGameToken3" fitHeight="63.0" fitWidth="93.0" layoutX="725.0" layoutY="449.0" pickOnBounds="true" preserveRatio="true" />
    </children>
 </AnchorPane>
