--- a/MyShelfie/src/GUI/GameScene.fxml
+++ b/MyShelfie/src/GUI/GameScene.fxml
@@ -1,5 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.scene.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
@@ -16,7 +22,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane fx:id="GameAnchor" prefHeight="865.0" prefWidth="1298.0" stylesheets="@Application.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.GameSceneController">
+<AnchorPane fx:id="GameAnchor" prefHeight="865.0" prefWidth="1298.0" stylesheets="@Application.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.GameSceneController">
    <children>
       <GridPane fx:id="Opp1ShelfGrid" hgap="5.0" layoutX="546.0" layoutY="30.0" prefHeight="116.0" prefWidth="112.0" vgap="4.0">
          <columnConstraints>
@@ -388,7 +394,7 @@
             <Font size="26.0" />
          </font>
       </Text>
-      <ImageView fx:id="myToken1" fitHeight="44.0" fitWidth="65.0" layoutX="362.0" layoutY="615.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="myEndGameToken" fitHeight="44.0" fitWidth="65.0" layoutX="362.0" layoutY="615.0" pickOnBounds="true" preserveRatio="true" />
       <ImageView fx:id="MyToken2" fitHeight="44.0" fitWidth="65.0" layoutX="465.0" layoutY="615.0" pickOnBounds="true" preserveRatio="true" />
       <ImageView fx:id="EndGameToken1" fitHeight="63.0" fitWidth="93.0" layoutX="729.0" layoutY="107.0" pickOnBounds="true" preserveRatio="true" />
       <ImageView fx:id="EndGameToken2" fitHeight="63.0" fitWidth="93.0" layoutX="725.0" layoutY="284.0" pickOnBounds="true" preserveRatio="true" />
