--- a/MyShelfie/src/GUI/GameScene.fxml
+++ b/MyShelfie/src/GUI/GameScene.fxml
@@ -316,16 +316,8 @@
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
       </GridPane>
-      <ImageView fx:id="token1" fitHeight="74.0" fitWidth="72.0" layoutX="1138.0" layoutY="336.0" pickOnBounds="true" preserveRatio="true" rotate="-11.3">
-         <image>
-            <Image url="@../../../MyShelfie/Resources/scoring_tokens/scoring_8.jpg" />
-         </image>
-      </ImageView>
-      <ImageView fx:id="token2" fitHeight="74.0" fitWidth="72.0" layoutX="1147.0" layoutY="487.0" pickOnBounds="true" preserveRatio="true" rotate="-11.3">
-         <image>
-            <Image url="@../../../MyShelfie/Resources/scoring_tokens/scoring_8.jpg" />
-         </image>
-      </ImageView>
+      <ImageView fx:id="cgc1tokens" fitHeight="74.0" fitWidth="72.0" layoutX="1138.0" layoutY="336.0" pickOnBounds="true" preserveRatio="true" rotate="-11.3" />
+      <ImageView fx:id="cgc2tokens" fitHeight="74.0" fitWidth="72.0" layoutX="1147.0" layoutY="487.0" pickOnBounds="true" preserveRatio="true" rotate="-11.3" />
 
       <TextField fx:id="chatTextField" layoutX="692.0" layoutY="790.0" prefHeight="44.0" prefWidth="505.0" visible="false" />
       <Button fx:id="chatButton" layoutX="1201.0" layoutY="790.0" mnemonicParsing="false" onAction="#chatButtonPressed" prefHeight="44.0" prefWidth="85.0" text="Chat" visible="false" />
@@ -393,7 +385,7 @@
       <ImageView fx:id="EndGameToken1" fitHeight="63.0" fitWidth="93.0" layoutX="729.0" layoutY="107.0" pickOnBounds="true" preserveRatio="true" />
       <ImageView fx:id="EndGameToken2" fitHeight="63.0" fitWidth="93.0" layoutX="725.0" layoutY="284.0" pickOnBounds="true" preserveRatio="true" />
       <ImageView fx:id="EndGameToken3" fitHeight="63.0" fitWidth="93.0" layoutX="725.0" layoutY="449.0" pickOnBounds="true" preserveRatio="true" />
-      <GridPane fx:id="TokenContainer" layoutX="516.0" layoutY="670.0" prefHeight="150.0" prefWidth="200.0">
+      <GridPane fx:id="TokenContainer" layoutX="516.0" layoutY="646.0" prefHeight="174.0" prefWidth="200.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
