--- a/MyShelfie/src/GUI/ConnectionType.fxml
+++ b/MyShelfie/src/GUI/ConnectionType.fxml
@@ -3,6 +3,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.RadioButton?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.ToggleGroup?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -18,6 +19,12 @@
             </ImageView>
          <Pane layoutX="248.0" layoutY="319.0" prefHeight="375.0" prefWidth="354.0">
             <children>
+               <Pane layoutX="52.0" layoutY="219.0" prefHeight="51.0" prefWidth="250.0" style="-fx-background-color: white;">
+                  <children>
+                     <Label layoutX="21.0" layoutY="17.0" text="Server ip:" />
+                     <TextField fx:id="ipAddress" layoutX="85.0" layoutY="12.0" />
+                  </children>
+               </Pane>
                   <Label fx:id="ConnectionLabel" layoutX="-87.0" prefHeight="63.0" prefWidth="572.0" styleClass="open-sans" text="Choose the connection:" textFill="#fffafa">
                      <font>
                         <Font size="50.0" />
@@ -36,7 +43,7 @@
                         <Font size="22.0" />
                      </font>
                </RadioButton>
-                  <Button layoutX="155.0" layoutY="270.0" mnemonicParsing="false" onAction="#switchToLoginScene" text="Next" />
+                  <Button layoutX="157.0" layoutY="281.0" mnemonicParsing="false" onAction="#switchToLoginScene" text="Next" />
             </children>
          </Pane>
       </children>
