--- a/MyShelfie/src/GUI/ConnectionType.fxml
+++ b/MyShelfie/src/GUI/ConnectionType.fxml
@@ -10,6 +10,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
 <AnchorPane fx:id="ConnectionType" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="865.0" prefWidth="1298.0" stylesheets="@Application.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.ConnectionTypeController">
    <Pane layoutX="452.0" prefHeight="871.0" prefWidth="849.0">
@@ -44,6 +45,11 @@
                      </font>
                </RadioButton>
                   <Button layoutX="157.0" layoutY="281.0" mnemonicParsing="false" onAction="#switchToLoginScene" text="Next" />
+               <Text fx:id="errorLabel" fill="WHITE" layoutX="32.0" layoutY="95.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Choose your connection and insert the ip adress of the server" wrappingWidth="321.33685302734375">
+                  <font>
+                     <Font size="20.0" />
+                  </font>
+               </Text>
             </children>
          </Pane>
       </children>
