--- a/MyShelfie/src/GUI/GameScene.fxml
+++ b/MyShelfie/src/GUI/GameScene.fxml
@@ -388,8 +388,8 @@
       </Text>
       <ImageView fx:id="myEndGameToken" fitHeight="44.0" fitWidth="65.0" layoutX="362.0" layoutY="615.0" pickOnBounds="true" preserveRatio="true" />
       <ImageView fx:id="MyToken2" fitHeight="44.0" fitWidth="65.0" layoutX="465.0" layoutY="615.0" pickOnBounds="true" preserveRatio="true" />
-      <ImageView fx:id="EndGameToken2" fitHeight="63.0" fitWidth="93.0" layoutX="725.0" layoutY="284.0" pickOnBounds="true" preserveRatio="true" />
-      <ImageView fx:id="EndGameToken3" fitHeight="63.0" fitWidth="93.0" layoutX="725.0" layoutY="449.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="OppChair2" fitHeight="63.0" fitWidth="93.0" layoutX="696.0" layoutY="280.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="OppChair3" fitHeight="63.0" fitWidth="93.0" layoutX="705.0" layoutY="444.0" pickOnBounds="true" preserveRatio="true" />
       <GridPane fx:id="TokenContainer" layoutX="516.0" layoutY="646.0" prefHeight="174.0" prefWidth="200.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -416,5 +416,8 @@
       </GridPane>
       <ImageView fx:id="firstPlayerSeat" fitHeight="63.0" fitWidth="65.0" layoutX="445.0" layoutY="465.0" pickOnBounds="true" preserveRatio="true" />
       <ImageView fx:id="MyEndGameToken" fitHeight="85.0" fitWidth="78.0" layoutX="577.0" layoutY="525.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="OppChair1" fitHeight="63.0" fitWidth="78.0" layoutX="703.0" layoutY="106.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="OppChair1" fitHeight="63.0" fitWidth="78.0" layoutX="713.0" layoutY="116.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="OppChair11" fitHeight="63.0" fitWidth="78.0" layoutX="713.0" layoutY="116.0" pickOnBounds="true" preserveRatio="true" />
    </children>
 </AnchorPane>
